@@ -7,6 +7,7 @@ import com.artiexh.api.service.OrderService;
 import com.artiexh.api.utils.DateTimeUtils;
 import com.artiexh.api.utils.PaymentUtils;
 import com.artiexh.data.jpa.entity.*;
+import com.artiexh.data.jpa.repository.*;
 import com.artiexh.data.jpa.projection.Bill;
 import com.artiexh.data.jpa.repository.*;
 import com.artiexh.model.domain.Order;
@@ -47,6 +48,7 @@ public class OrderServiceImpl implements OrderService {
 	private final UserAddressRepository userAddressRepository;
 	private final ProductRepository productRepository;
 	private final OrderRepository orderRepository;
+	private final OrderDetailRepository orderDetailRepository;
 	private final CartItemRepository cartItemRepository;
 	private final OrderTransactionRepository orderTransactionRepository;
 	private final OrderMapper orderMapper;
@@ -62,7 +64,7 @@ public class OrderServiceImpl implements OrderService {
 			default -> onlinePaymentOrder(userId, checkoutRequest);
 		};
 
-		return orderEntities.stream().map(orderMapper::entityToResponseDomain).collect(Collectors.toList());
+		return orderEntities.stream().map(orderMapper::entityToResponseDomain).toList();
 	}
 
 	private List<OrderEntity> cashPaymentOrder(long userId, CheckoutRequest checkoutRequest) {
@@ -112,14 +114,12 @@ public class OrderServiceImpl implements OrderService {
 		}
 	}
 
-	//@Transactional
-	public UserAddressEntity getUserAddressEntity(long userId, long addressId) {
+	private UserAddressEntity getUserAddressEntity(long userId, long addressId) {
 		return userAddressRepository.findByIdAndUserId(addressId, userId)
 			.orElseThrow(() -> new IllegalArgumentException("Address not existed"));
 	}
 
-	//@Transactional(isolation = Isolation.SERIALIZABLE)
-	public List<CartItemEntity> validateShopProductAndReduceQuantity(long userId, Set<CheckoutShop> shops, PaymentMethod paymentMethod) {
+	private List<CartItemEntity> validateShopProductAndReduceQuantity(long userId, Set<CheckoutShop> shops, PaymentMethod paymentMethod) {
 		Set<CartItemId> itemIds = shops.stream()
 			.flatMap(checkoutShop -> checkoutShop.getItemIds().stream())
 			.map(itemId -> new CartItemId(userId, itemId))
@@ -162,35 +162,39 @@ public class OrderServiceImpl implements OrderService {
 		return cartItemEntities;
 	}
 
-	//@Transactional
-	public List<OrderEntity> createOrder(long userId, UserAddressEntity address, OrderStatus status,
-										 Set<CheckoutShop> shops, List<CartItemEntity> cartItemEntities,
-										 PaymentMethod paymentMethod) {
-		Set<OrderEntity> orderEntities = shops.stream().map(checkoutShop ->
-				OrderEntity.builder()
+	private List<OrderEntity> createOrder(long userId, UserAddressEntity address, OrderStatus status,
+										  Set<CheckoutShop> shops, List<CartItemEntity> cartItemEntities,
+										  PaymentMethod paymentMethod) {
+		Set<OrderEntity> orderEntities = shops.stream().map(checkoutShop -> {
+				var orderEntity = OrderEntity.builder()
 					.user(UserEntity.builder().id(userId).build())
 					.shop(ArtistEntity.builder().id(checkoutShop.getShopId()).build())
 					.shippingAddress(address)
 					.note(checkoutShop.getNote())
 					.paymentMethod(paymentMethod.getByteValue())
 					.status(status.getByteValue())
-					.orderDetails(cartItemEntities.stream()
-						.filter(cartItemEntity -> cartItemEntity.getProduct().getShop().getId().equals(checkoutShop.getShopId()))
-						.map(cartItemEntity -> OrderDetailEntity.builder()
-							.product(cartItemEntity.getProduct())
-							.quantity(cartItemEntity.getQuantity())
-							.build()
-						)
-						.collect(Collectors.toSet())
+					.build();
+
+				var savedOrderEntity = orderRepository.save(orderEntity);
+				var orderDetailEntities = cartItemEntities.stream()
+					.filter(cartItemEntity -> cartItemEntity.getProduct().getShop().getId().equals(checkoutShop.getShopId()))
+					.map(cartItemEntity -> OrderDetailEntity.builder()
+						.id(new OrderDetailId(savedOrderEntity.getId(), null))
+						.product(cartItemEntity.getProduct())
+						.quantity(cartItemEntity.getQuantity())
+						.build()
 					)
-					.build()
-			)
+					.collect(Collectors.toSet());
+
+				orderDetailRepository.saveAll(orderDetailEntities);
+
+				return savedOrderEntity;
+			})
 			.collect(Collectors.toSet());
-		return orderRepository.saveAll(orderEntities);
+		return orderEntities.stream().toList();
 	}
 
-	//@Transactional(isolation = Isolation.SERIALIZABLE)
-	public void rollbackShopProductQuantity(List<CartItemEntity> cartItemEntities) {
+	private void rollbackShopProductQuantity(List<CartItemEntity> cartItemEntities) {
 		Set<ProductEntity> productEntities = cartItemEntities.stream()
 			.map(cartItemEntity -> {
 				ProductEntity productEntity = cartItemEntity.getProduct();
@@ -268,13 +272,8 @@ public class OrderServiceImpl implements OrderService {
 	}
 
 	@Override
-	@Transactional
 	public String confirmPayment(PaymentQueryProperties paymentQueryProperties) {
 		String confirmUrl = vnpProperties.getFeConfirmUrl();
-		if (paymentQueryProperties.getVnp_ResponseCode().equals("00")) {
-			log.info("Payment is done successfully. Transaction No" + paymentQueryProperties.getVnp_TransactionNo());
-			updateOrderStatus(Long.parseLong(paymentQueryProperties.getVnp_TxnRef()), OrderStatus.PREPARING);
-		}
 		OrderTransactionEntity orderTransaction = OrderTransactionEntity.builder()
 			.transactionNo(paymentQueryProperties.getVnp_TransactionNo())
 			.orderInfo(paymentQueryProperties.getVnp_OrderInfo())
@@ -287,6 +286,10 @@ public class OrderServiceImpl implements OrderService {
 			.orderId(Long.parseLong(paymentQueryProperties.getVnp_TxnRef()))
 			.build();
 		orderTransactionRepository.save(orderTransaction);
+		if (paymentQueryProperties.getVnp_ResponseCode().equals("00")) {
+			log.info("Payment is done successfully. Transaction No" + paymentQueryProperties.getVnp_TransactionNo());
+			updateOrderStatus(Long.parseLong(paymentQueryProperties.getVnp_TxnRef()), OrderStatus.PREPARING);
+		}
 		log.warn("Payment Transaction" + paymentQueryProperties.getVnp_TransactionNo() + " Status " + paymentQueryProperties.getVnp_TransactionStatus());
 		log.warn("Payment Transaction" + paymentQueryProperties.getVnp_TransactionNo() + " Response Code " + paymentQueryProperties.getVnp_ResponseCode());
 		return confirmUrl;
